<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:id="@+id/id_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_connexion"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/password_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="false"
        android:freezesText="false"
        android:text="@string/password_connexion"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/connexion_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text="@string/connexion"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/exit_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:text="@string/exit"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

</LinearLayout>