<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/size_margin_activity">

    <ImageView
        android:id="@+id/photo_member_notice"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@drawable/image0"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_member_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_name_member_notice"
            android:textSize="@dimen/size_name_member_notice"/>

        <TextView
            android:id="@+id/firstName_member_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:text="@string/default_firstName_member_notice"
            android:layout_toRightOf="@id/name_member_notice"
            android:textSize="@dimen/size_firstname_member_notice"/>

        <TextView
            android:id="@+id/rate_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_notice"
            android:layout_below="@id/name_member_notice"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_rate_notice"
            android:layout_below="@id/name_member_notice"
            android:layout_toRightOf="@id/rate_notice"/>

        <TextView
            android:id="@+id/description_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_description_notice"
            android:textSize="@dimen/size_description_notice"
            android:layout_below="@id/rate_notice"/>

    </RelativeLayout>
</LinearLayout>